--- a/biblioteca/pom.xml
+++ b/biblioteca/pom.xml
@@ -39,6 +39,13 @@
 			<artifactId>primefaces</artifactId>
 			<version>10.0.0</version>
 		</dependency>
+    <!-- https://mvnrepository.com/artifact/org.webjars/bootstrap -->
+    <dependency>
+      <groupId>org.webjars</groupId>
+      <artifactId>bootstrap</artifactId>
+      <version>5.1.3</version>
+    </dependency>
+
     <!-- https://mvnrepository.com/artifact/javax/javaee-api -->
     <!-- https://mvnrepository.com/artifact/jakarta.platform/jakarta.jakartaee-api -->
     <dependency>
